raffia/tests/error/scss/at-rule/forward/show-and-hide.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ show-and-hide.scss:1:21
  │
1 │ @forward "a" show b hide c;
  │                     ^^^^


